--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,9 +73,11 @@
         android:text="@string/profile"
         android:id="@+id/textView2"
         android:textSize="20sp"
-        android:layout_alignTop="@+id/imageView"
-        android:layout_alignLeft="@+id/imageButton"
-        android:layout_alignStart="@+id/imageButton" />
+        android:layout_below="@+id/imageView"
+        android:layout_toRightOf="@+id/imageView3"
+        android:layout_toEndOf="@+id/imageView3"
+        android:layout_marginLeft="10dp"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -95,7 +97,9 @@
         android:src="@drawable/find"
         android:layout_alignTop="@+id/textView"
         android:layout_alignLeft="@+id/imageButton2"
-        android:layout_alignStart="@+id/imageButton2" />
+        android:layout_alignStart="@+id/imageButton2"
+        android:layout_marginTop="4dp"
+        />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -103,8 +107,8 @@
         android:id="@+id/imageView3"
         android:src="@drawable/user"
         android:layout_alignTop="@+id/textView2"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_toRightOf="@+id/textView3"
+        android:layout_toEndOf="@+id/textView3" />
 
     <ImageView
         android:layout_width="wrap_content"
