--- a/app/src/main/res/menu/menu_lend_parking.xml
+++ b/app/src/main/res/menu/menu_lend_parking.xml
@@ -1,10 +1,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.parking.umangv.parking.LendParking">
+    >
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/profile"
+        android:orderInCategory="101"
+        android:title="Profile"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/mail"
+        android:orderInCategory="102"
+        android:title="Mail"
+        android:icon="@drawable/ic_email"
+        app:showAsAction="ifRoom"
+        />
+    <item
+        android:id="@+id/notes"
+        android:orderInCategory="102"
+        android:title="notes"
+        android:icon="@drawable/notes"
+        app:showAsAction="ifRoom" />
+
 </menu>
