--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,7 +4,7 @@
         <item name="android:colorPrimary">@color/colorPrimary</item>
         <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:colorAccent">@color/colorAccent</item>
-
+        <item name="android:textColorPrimary">@color/colorPrimaryText</item>
         <item name="android:divider">@color/colorDivider</item>
         <item name="android:toolbarStyle">@style/Widget.AppCompat.Toolbar</item>
     </style>
