--- a/app/src/main/res/menu/nav.xml
+++ b/app/src/main/res/menu/nav.xml
@@ -6,4 +6,22 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/profile"
+        android:orderInCategory="101"
+        android:title="Profile"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/mail"
+        android:orderInCategory="102"
+        android:title="Mail"
+        android:icon="@drawable/ic_email"
+        app:showAsAction="ifRoom"
+        />
+    <item
+        android:id="@+id/notes"
+        android:orderInCategory="102"
+        android:title="notes"
+        android:icon="@drawable/ic_notes"
+        app:showAsAction="ifRoom" />
 </menu>
